# Troubleshooter

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  main.py
src/controller/: commands.c  commands.h  cpu.c  cpu.h  disks.c  disks.h  disks.py  network.c  network.h  system.c  system.h
src/hardware/: cpu.py  disks.py
src/utils/: commands.h  io.c  io.h  validation.c  validation.h
src/view/: menu.c  menu.h
